Ex5/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-app1
  namespace: ex5
spec:
  stripPrefix:
    prefixes:
      - /app1
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-app2
  namespace: ex5
spec:
  stripPrefix:
    prefixes:
      - /app2
