Ex5/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: ex5
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
